# Data-Structures

./: CMakeLists.txt  Practica-9.c  Practica4-5  Practica9-1.c  practica9-1
AnalisisDeAlgoritmos/: Practica-10-2  Practica-10-2.c  Practica-10.c  Practica-5.c  Practica-6.c  Practica-7.c  Practica-8.c  Practica1.c  Practica2-1.c  Practica2.c  Practica3-1.c  Practica3.c  Practica4  Practica4.c  conio.h  main (3).c  main (8).c  practica-10  practica-6  practica-8  quickSort.c  radixSort.c
AnalisisDeAlgoritmos/Practica3/: Practica-6.c  Practica3-1.c  Practica3.c  quickSort.c  radixSort.c  shellSort.c
EstructuraDeDatos/: Practica 10 - Maybe  Practica3.c  Practica4  Practica4-2.c  Practica4-3.c  Practica4-4.c  Practica4-5.c  Practica4.c  Practica4_llorar.c  Practica5  Practica5-1.c  Practica5.c  Practica6.c  Practica7-1.c  Practica7.c  Practica9.c  UnVideoMaMiGente.c
EstructuraDeDatos/Practica 10/: hash.c  hash.h  main.c  movie.c  movie.h
EstructuraDeDatos/Practica 3/: Practica3.c
EstructuraDeDatos/Practica 4/: Practica4-2.c  Practica4-3.c  Practica4-4.c  Practica4_Final.c  Practica4_finally.c
EstructuraDeDatos/Practica 5/: Practica5.c
EstructuraDeDatos/Practica 6/: libros.c  libros.h  main.c  stack.c  stack.h  tree.c  tree.h
EstructuraDeDatos/Practica 7/: Practica7-Stack.c  Practica7-Tree.c  Práctica7-2.c  (+1 more)
ImplementacionPila/: Colas.c  EjercicioPila.c  Pila.c  Pila.h
StopBeingAverage/: Practica9-1.c  arraysStrings  arraysStrings.c  calculator  calculator.c  helloUser.c  hello_user  hello_world.c  hola_mundo  parImpar  parImpar.c  pointers  pointers.c
(+23 files in other folders)
